--- a/public/index.html
+++ b/public/index.html
@@ -21,11 +21,12 @@
     -->
     <title>React App</title>
   </head>
-  <body>
+  <body onload="PR.prettyPrint()">
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
     <div id="root"></div>
+    <script type="text/javascript" src="https://cdn.rawgit.com/google/code-prettify/master/loader/prettify.js"></script>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
