增加更多翻译页面

--- a/public/index.html
+++ b/public/index.html
@@ -22,13 +22,16 @@
     -->
     <title>React App</title>
   </head>
-  <body onload="PR.prettyPrint()">
+  <body>
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
     <div id="root"></div>
+   <!--  <script type="text/javascript" src="./libs/react.min.js"></script>
+    <script type="text/javascript" src="./libs/react-dom.min.js"></script>
+    <script type="text/javascript" src="./libs/react-router-dom.min.js"></script> -->
     <script src="//cdn.bootcss.com/prettify/r298/prettify.min.js"></script>
-    <!--
+    <!--onload="PR.prettyPrint()"
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
 
