--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
+    <meta name="author" content="betweens, hmfsx521@gmail.com" />
+    <meta name="keywords" content="CSS, HTML, JavaScript, 前端UI, material-ui中文版, material-ui" />
+    <meta name="description" content="material-ui中文版" />
+
     <!--
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
